# sorting-contest

./: Cargo.toml  Justfile  LICENSE  README.md  bench.py  build.rs  insertion_sort_threshold.ods  mysort.c  performance  rust-toolchain.toml
src/: lib.rs  main.rs
