[package]
name = "sorting-contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pretty_assertions = "1.3"
sdl2 = "0.35.2"

[build-dependencies]
cc = "1.0"
